# pixel5g.vorotnikov.me

./: .gitignore  CITATION.cff  NOTICE  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
adapters/static/: vite.config.ts
docs/: manual-device-test.md
engine/: Cargo.toml
engine/src/: lib.rs
engine/tests/: web.rs
public/: CNAME
public/patches/: lte_patch.toml  nr_patch.toml
scripts/: build-wasm.sh
src/: root.tsx
src/components/: log-panel.tsx  step-row.tsx
src/lib/: adb.ts  device.test.ts  device.ts  engine.test.ts  engine.ts  wizard.test.ts  wizard.ts
src/routes/: index.tsx
